feat: Correções endpoints e tratamento excessões + globalExceptionHandler