@@ -6,9 +6,10 @@ import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class VeterinarioUserDetailsService implements UserDetailsService {
@@ -27,7 +28,7 @@ public class VeterinarioUserDetailsService implements UserDetailsService {
         return new User(
                 veterinario.getEmail(),
                 veterinario.getPassword(),
-                Collections.emptyList() // sem roles por enquanto
+                List.of(new SimpleGrantedAuthority("ROLE_" + veterinario.getRole()))
         );
     }
 }
